lib/gm/EnhancedPGNParser.cpp

// Generated from EnhancedPGNParser.g4 by ANTLR 4.13.1


#include "EnhancedPGNParserListener.h"
#include "EnhancedPGNParserVisitor.h"

#include "EnhancedPGNParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct EnhancedPGNParserStaticData final {
  EnhancedPGNParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  EnhancedPGNParserStaticData(const EnhancedPGNParserStaticData&) = delete;
  EnhancedPGNParserStaticData(EnhancedPGNParserStaticData&&) = delete;
  EnhancedPGNParserStaticData& operator=(const EnhancedPGNParserStaticData&) = delete;
  EnhancedPGNParserStaticData& operator=(EnhancedPGNParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag enhancedpgnparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
EnhancedPGNParserStaticData *enhancedpgnparserParserStaticData = nullptr;

void enhancedpgnparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (enhancedpgnparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(enhancedpgnparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<EnhancedPGNParserStaticData>(
    std::vector<std::string>{
      "parse", "pgn_database", "pgn", "tag_pairs", "tag_pair", "tag_key", 
      "tag_value", "move_text", "game_termination", "white_wins", "black_wins", 
      "draw", "unknown_ending", "move_text_item", "turn_item", "nag", "comment", 
      "eol_comment", "eol_comment_body", "turn", "alternate_line", "move_num", 
      "san", "check_like", "check", "double_check", "checkmate", "move_analysis", 
      "blunder", "mistake", "dubious_move", "interesting_move", "good_move", 
      "brilliant_move", "capture", "pawn_capture", "piece_capture", "pawn_move", 
      "promotion", "piece", "piece_move", "castle", "block_comment", "block_comment_body", 
      "block_comment_text", "command", "command_id", "command_params"
    },
    std::vector<std::string>{
      "", "'['", "", "", "", "", "", "", "", "' '", "';'", "", "'{'", "", 
      "", "", "'='", "", "", "'O-O'", "'O-O-O'", "'x'", "'('", "')'", "'\\u003F\\u003F'", 
      "'\\u003F'", "'\\u003F!'", "'!\\u003F'", "'!'", "'!!'", "'+'", "'#'", 
      "'1-0'", "'0-1'", "'1/2-1/2'", "'*'", "", "", "", "'[%'", "'}'", "", 
      "", "", "','"
    },
    std::vector<std::string>{
      "", "TAG_START", "STRING", "MOVE_TEXT_START", "MOVE_TEXT_START_WITH_COMMENT", 
      "NEW_LINE", "TAG_END", "TAG_VALUE", "TAG_KEY", "TAG_SPACE", "EOL_COMMENT_START", 
      "MOVE_NUM", "BLOCK_COMMENT_START", "WS", "PIECE", "LOCATION", "PROMOTION", 
      "RANK", "FILE", "SHORT_CASTLE", "LONG_CASTLE", "CAPTURE_MARKER", "ALTERNATE_LINE_START", 
      "ALTERNATE_LINE_END", "BLUNDER", "MISTAKE", "DUBIOUS_MOVE", "INTERESTING_MOVE", 
      "GOOD_MOVE", "BRILLIANT_MOVE", "CHECK", "CHECKMATE", "WHITE_WINS", 
      "BLACK_WINS", "DRAW", "UNKOWN_ENDING", "NAG", "EOL_COMMENT_TEXT", 
      "EOL_COMMENT_END", "COMMAND_START", "BLOCK_COMMENT_END", "BLOCK_COMMENT_TEXT", 
      "COMMAND_ID", "COMMAND_END", "COMMA", "PARAM_TEXT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  enhancedpgnparserParserStaticData = staticData.release();
}

}

EnhancedPGNParser::EnhancedPGNParser(TokenStream *input) : EnhancedPGNParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

EnhancedPGNParser::EnhancedPGNParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  EnhancedPGNParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *enhancedpgnparserParserStaticData->atn, enhancedpgnparserParserStaticData->decisionToDFA, enhancedpgnparserParserStaticData->sharedContextCache, options);
}

EnhancedPGNParser::~EnhancedPGNParser() {
  delete _interpreter;
}

const atn::ATN& EnhancedPGNParser::getATN() const {
  return *enhancedpgnparserParserStaticData->atn;
}

std::string EnhancedPGNParser::getGrammarFileName() const {
  return "EnhancedPGNParser.g4";
}

const std::vector<std::string>& EnhancedPGNParser::getRuleNames() const {
  return enhancedpgnparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& EnhancedPGNParser::getVocabulary() const {
  return enhancedpgnparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView EnhancedPGNParser::getSerializedATN() const {
  return enhancedpgnparserParserStaticData->serializedATN;
}


//----------------- ParseContext ------------------------------------------------------------------

EnhancedPGNParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EnhancedPGNParser::Pgn_databaseContext* EnhancedPGNParser::ParseContext::pgn_database() {
  return getRuleContext<EnhancedPGNParser::Pgn_databaseContext>(0);
}

tree::TerminalNode* EnhancedPGNParser::ParseContext::EOF() {
  return getToken(EnhancedPGNParser::EOF, 0);
}

std::vector<tree::TerminalNode *> EnhancedPGNParser::ParseContext::NEW_LINE() {
  return getTokens(EnhancedPGNParser::NEW_LINE);
}

tree::TerminalNode* EnhancedPGNParser::ParseContext::NEW_LINE(size_t i) {
  return getToken(EnhancedPGNParser::NEW_LINE, i);
}


size_t EnhancedPGNParser::ParseContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleParse;
}

void EnhancedPGNParser::ParseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParse(this);
}

void EnhancedPGNParser::ParseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParse(this);
}


std::any EnhancedPGNParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::ParseContext* EnhancedPGNParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, EnhancedPGNParser::RuleParse);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    pgn_database();
    setState(100);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EnhancedPGNParser::NEW_LINE) {
      setState(97);
      match(EnhancedPGNParser::NEW_LINE);
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(103);
    match(EnhancedPGNParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pgn_databaseContext ------------------------------------------------------------------

EnhancedPGNParser::Pgn_databaseContext::Pgn_databaseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<EnhancedPGNParser::PgnContext *> EnhancedPGNParser::Pgn_databaseContext::pgn() {
  return getRuleContexts<EnhancedPGNParser::PgnContext>();
}

EnhancedPGNParser::PgnContext* EnhancedPGNParser::Pgn_databaseContext::pgn(size_t i) {
  return getRuleContext<EnhancedPGNParser::PgnContext>(i);
}

std::vector<tree::TerminalNode *> EnhancedPGNParser::Pgn_databaseContext::NEW_LINE() {
  return getTokens(EnhancedPGNParser::NEW_LINE);
}

tree::TerminalNode* EnhancedPGNParser::Pgn_databaseContext::NEW_LINE(size_t i) {
  return getToken(EnhancedPGNParser::NEW_LINE, i);
}


size_t EnhancedPGNParser::Pgn_databaseContext::getRuleIndex() const {
  return EnhancedPGNParser::RulePgn_database;
}

void EnhancedPGNParser::Pgn_databaseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPgn_database(this);
}

void EnhancedPGNParser::Pgn_databaseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPgn_database(this);
}


std::any EnhancedPGNParser::Pgn_databaseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitPgn_database(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Pgn_databaseContext* EnhancedPGNParser::pgn_database() {
  Pgn_databaseContext *_localctx = _tracker.createInstance<Pgn_databaseContext>(_ctx, getState());
  enterRule(_localctx, 2, EnhancedPGNParser::RulePgn_database);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(105);
    pgn();
    setState(114);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(107); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(106);
          match(EnhancedPGNParser::NEW_LINE);
          setState(109); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == EnhancedPGNParser::NEW_LINE);
        setState(111);
        pgn(); 
      }
      setState(116);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PgnContext ------------------------------------------------------------------

EnhancedPGNParser::PgnContext::PgnContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EnhancedPGNParser::Move_textContext* EnhancedPGNParser::PgnContext::move_text() {
  return getRuleContext<EnhancedPGNParser::Move_textContext>(0);
}

EnhancedPGNParser::Tag_pairsContext* EnhancedPGNParser::PgnContext::tag_pairs() {
  return getRuleContext<EnhancedPGNParser::Tag_pairsContext>(0);
}

std::vector<tree::TerminalNode *> EnhancedPGNParser::PgnContext::NEW_LINE() {
  return getTokens(EnhancedPGNParser::NEW_LINE);
}

tree::TerminalNode* EnhancedPGNParser::PgnContext::NEW_LINE(size_t i) {
  return getToken(EnhancedPGNParser::NEW_LINE, i);
}


size_t EnhancedPGNParser::PgnContext::getRuleIndex() const {
  return EnhancedPGNParser::RulePgn;
}

void EnhancedPGNParser::PgnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPgn(this);
}

void EnhancedPGNParser::PgnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPgn(this);
}


std::any EnhancedPGNParser::PgnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitPgn(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::PgnContext* EnhancedPGNParser::pgn() {
  PgnContext *_localctx = _tracker.createInstance<PgnContext>(_ctx, getState());
  enterRule(_localctx, 4, EnhancedPGNParser::RulePgn);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(126);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EnhancedPGNParser::MOVE_TEXT_START:
      case EnhancedPGNParser::MOVE_TEXT_START_WITH_COMMENT:
      case EnhancedPGNParser::EOL_COMMENT_START:
      case EnhancedPGNParser::MOVE_NUM:
      case EnhancedPGNParser::BLOCK_COMMENT_START:
      case EnhancedPGNParser::WHITE_WINS:
      case EnhancedPGNParser::BLACK_WINS:
      case EnhancedPGNParser::DRAW:
      case EnhancedPGNParser::UNKOWN_ENDING:
      case EnhancedPGNParser::NAG: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        move_text();
        break;
      }

      case EnhancedPGNParser::TAG_START: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        tag_pairs();
        setState(120); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(119);
          match(EnhancedPGNParser::NEW_LINE);
          setState(122); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == EnhancedPGNParser::NEW_LINE);
        setState(124);
        move_text();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tag_pairsContext ------------------------------------------------------------------

EnhancedPGNParser::Tag_pairsContext::Tag_pairsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<EnhancedPGNParser::Tag_pairContext *> EnhancedPGNParser::Tag_pairsContext::tag_pair() {
  return getRuleContexts<EnhancedPGNParser::Tag_pairContext>();
}

EnhancedPGNParser::Tag_pairContext* EnhancedPGNParser::Tag_pairsContext::tag_pair(size_t i) {
  return getRuleContext<EnhancedPGNParser::Tag_pairContext>(i);
}

std::vector<tree::TerminalNode *> EnhancedPGNParser::Tag_pairsContext::NEW_LINE() {
  return getTokens(EnhancedPGNParser::NEW_LINE);
}

tree::TerminalNode* EnhancedPGNParser::Tag_pairsContext::NEW_LINE(size_t i) {
  return getToken(EnhancedPGNParser::NEW_LINE, i);
}


size_t EnhancedPGNParser::Tag_pairsContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleTag_pairs;
}

void EnhancedPGNParser::Tag_pairsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTag_pairs(this);
}

void EnhancedPGNParser::Tag_pairsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTag_pairs(this);
}


std::any EnhancedPGNParser::Tag_pairsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitTag_pairs(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Tag_pairsContext* EnhancedPGNParser::tag_pairs() {
  Tag_pairsContext *_localctx = _tracker.createInstance<Tag_pairsContext>(_ctx, getState());
  enterRule(_localctx, 6, EnhancedPGNParser::RuleTag_pairs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(128);
      tag_pair();
      setState(129);
      match(EnhancedPGNParser::NEW_LINE);
      setState(133); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EnhancedPGNParser::TAG_START);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tag_pairContext ------------------------------------------------------------------

EnhancedPGNParser::Tag_pairContext::Tag_pairContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EnhancedPGNParser::Tag_pairContext::TAG_START() {
  return getToken(EnhancedPGNParser::TAG_START, 0);
}

EnhancedPGNParser::Tag_keyContext* EnhancedPGNParser::Tag_pairContext::tag_key() {
  return getRuleContext<EnhancedPGNParser::Tag_keyContext>(0);
}

EnhancedPGNParser::Tag_valueContext* EnhancedPGNParser::Tag_pairContext::tag_value() {
  return getRuleContext<EnhancedPGNParser::Tag_valueContext>(0);
}

tree::TerminalNode* EnhancedPGNParser::Tag_pairContext::TAG_END() {
  return getToken(EnhancedPGNParser::TAG_END, 0);
}

std::vector<tree::TerminalNode *> EnhancedPGNParser::Tag_pairContext::TAG_SPACE() {
  return getTokens(EnhancedPGNParser::TAG_SPACE);
}

tree::TerminalNode* EnhancedPGNParser::Tag_pairContext::TAG_SPACE(size_t i) {
  return getToken(EnhancedPGNParser::TAG_SPACE, i);
}


size_t EnhancedPGNParser::Tag_pairContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleTag_pair;
}

void EnhancedPGNParser::Tag_pairContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTag_pair(this);
}

void EnhancedPGNParser::Tag_pairContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTag_pair(this);
}


std::any EnhancedPGNParser::Tag_pairContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitTag_pair(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Tag_pairContext* EnhancedPGNParser::tag_pair() {
  Tag_pairContext *_localctx = _tracker.createInstance<Tag_pairContext>(_ctx, getState());
  enterRule(_localctx, 8, EnhancedPGNParser::RuleTag_pair);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    match(EnhancedPGNParser::TAG_START);
    setState(136);
    tag_key();
    setState(138); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(137);
      match(EnhancedPGNParser::TAG_SPACE);
      setState(140); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EnhancedPGNParser::TAG_SPACE);
    setState(142);
    tag_value();
    setState(143);
    match(EnhancedPGNParser::TAG_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tag_keyContext ------------------------------------------------------------------

EnhancedPGNParser::Tag_keyContext::Tag_keyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EnhancedPGNParser::Tag_keyContext::TAG_KEY() {
  return getToken(EnhancedPGNParser::TAG_KEY, 0);
}


size_t EnhancedPGNParser::Tag_keyContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleTag_key;
}

void EnhancedPGNParser::Tag_keyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTag_key(this);
}

void EnhancedPGNParser::Tag_keyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTag_key(this);
}


std::any EnhancedPGNParser::Tag_keyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitTag_key(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Tag_keyContext* EnhancedPGNParser::tag_key() {
  Tag_keyContext *_localctx = _tracker.createInstance<Tag_keyContext>(_ctx, getState());
  enterRule(_localctx, 10, EnhancedPGNParser::RuleTag_key);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(EnhancedPGNParser::TAG_KEY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tag_valueContext ------------------------------------------------------------------

EnhancedPGNParser::Tag_valueContext::Tag_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EnhancedPGNParser::Tag_valueContext::TAG_VALUE() {
  return getToken(EnhancedPGNParser::TAG_VALUE, 0);
}


size_t EnhancedPGNParser::Tag_valueContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleTag_value;
}

void EnhancedPGNParser::Tag_valueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTag_value(this);
}

void EnhancedPGNParser::Tag_valueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTag_value(this);
}


std::any EnhancedPGNParser::Tag_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitTag_value(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Tag_valueContext* EnhancedPGNParser::tag_value() {
  Tag_valueContext *_localctx = _tracker.createInstance<Tag_valueContext>(_ctx, getState());
  enterRule(_localctx, 12, EnhancedPGNParser::RuleTag_value);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    match(EnhancedPGNParser::TAG_VALUE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Move_textContext ------------------------------------------------------------------

EnhancedPGNParser::Move_textContext::Move_textContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EnhancedPGNParser::Game_terminationContext* EnhancedPGNParser::Move_textContext::game_termination() {
  return getRuleContext<EnhancedPGNParser::Game_terminationContext>(0);
}

std::vector<EnhancedPGNParser::Move_text_itemContext *> EnhancedPGNParser::Move_textContext::move_text_item() {
  return getRuleContexts<EnhancedPGNParser::Move_text_itemContext>();
}

EnhancedPGNParser::Move_text_itemContext* EnhancedPGNParser::Move_textContext::move_text_item(size_t i) {
  return getRuleContext<EnhancedPGNParser::Move_text_itemContext>(i);
}

std::vector<EnhancedPGNParser::CommentContext *> EnhancedPGNParser::Move_textContext::comment() {
  return getRuleContexts<EnhancedPGNParser::CommentContext>();
}

EnhancedPGNParser::CommentContext* EnhancedPGNParser::Move_textContext::comment(size_t i) {
  return getRuleContext<EnhancedPGNParser::CommentContext>(i);
}


size_t EnhancedPGNParser::Move_textContext::getRuleIndex() const {
  return EnhancedPGNParser::RuleMove_text;
}

void EnhancedPGNParser::Move_textContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMove_text(this);
}

void EnhancedPGNParser::Move_textContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EnhancedPGNParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMove_text(this);
}


std::any EnhancedPGNParser::Move_textContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EnhancedPGNParserVisitor*>(visitor))
    return parserVisitor->visitMove_text(this);
  else
    return visitor->visitChildren(this);
}

EnhancedPGNParser::Move_textContext* EnhancedPGNParser::move_text() {
  Move_textContext *_localctx = _tracker.createInstance<Move_textContext>(_ctx, getState());
  enterRule(_localctx, 14, EnhancedPGNParser::RuleMove_text);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68719483928) != 0)) {
      setState(149);
      move_text_item();
      setState(154);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(155);
    game_termination();
    setState(159);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 5136) != 0)) {
      setState(156);
      comment();
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Game_terminationContext ------------------------------------------------------------------

EnhancedPGNParser::Game_terminationContext::Game_terminationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EnhancedPGNParser::White_winsContext* EnhancedPGNParser::Game_terminationContext::white_wins() {
  return getRuleContext<EnhancedPGNParser::White_winsContext>(0);
}

EnhancedPGNParser::Black_winsContext* EnhancedPGNParser::Game_terminationContext::black_wins() {
  return getRuleContext<EnhancedPGNParser::Black_winsContext>(0);
}
